# MolecularClockSimulation

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
data/config/: balanced_strict_clock.json  balanced_strict_clock_calibration.json  biology.json  random_strict_clock_calibration.json  relaxed_clock.json  relaxed_clock_calibration.json  strict_clock.json  ultrametric_tree.json
diagrams/: explorer-workflow.bpmn  generic-workflow.bpmn  nj-reconstruction.bpmn  relaxed-clock-workflow.bpmn  strict-clock-workflow.bpmn  upgma-reconstruction.bpmn
docker/relaxedclock/: Dockerfile  README.md  docker-compose.yml
docker/strictclock/: Dockerfile  README.md  docker-compose.yml
scripts/: run-distance-calculator.sh  run-model.sh  run-relaxedclock-engine.sh  run-relaxedclock-explorer.sh  run-strictclock-engine.sh  run-strictclock-explorer.sh  run-tests.sh  run-upgma.sh
src/biology/: __init__.py  mutation.py
src/common/: __init__.py  constants.py  downloads.py  graphviz.py  identifiers.py  serialization.py  styling.py
src/distancematrix/: __init__.py  __main__.py  calculator.py  cli.py
src/fossil_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/molecular_clock_simulation/: __init__.py  calibration_ui.py  cli.py  distance_analysis.py  reconstruction.py
src/molecular_clock_simulation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/phylogeny/: __init__.py  __main__.py  cli.py  neighbor_joining.py  upgma.py
src/relaxedclock/: __init__.py  cli.py  (+3 more)
tests/: test_distance_analysis.py  test_distancematrix.py  test_mutationmodel.py  test_neighbor_joining.py  test_relaxedclock.py  test_simulator.py  test_treecalibration.py  test_treecomparison.py  test_upgma.py
(+138 files in other folders)
