[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molecular-clock-simulation"
version = "0.2.0"
description = "Molecular Clock Simulation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "streamlit>=1.36",
]

[project.scripts]
molecular-clock-sim = "strictclock.cli:main"
molecular-clock-explorer = "strictclock.explorer:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest"
]
